--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,9 +16,8 @@ jobs:
       - run: yarn install 
       - name: deploy
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           tsc
           cp ./package.json ./dist/
-          echo //registry.npmjs.org/:_authToken=${NPM_TOKEN} > ./dist/.npmrc
           npm publish ./dist
