--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,6 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          tsc
-          cp ./package.json ./dist/
-          npm publish ./dist
+          yarn build
+          tar -czvf package.tar.gz dist
+          npm publish package.tar.gz
