--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
       "target": "ES2018",
       "module": "commonjs",
+      "rootDir": "./src",
       "moduleResolution": "node",
       "strict": true,
       "skipLibCheck": true,
